# pipeline_oracle_duck

./: pyproject.toml
pipe/: duckdb_processing.py  main.py  oracle_connection.py
pipe/secret/: oracle_connection_info.json  oracle_secrets.py
pipe/sql/: queries.sql
pipe/utils/: utils.py
